# fastedit

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
media/: test_subtitles.ass
src/fastedit/core/: Base.py  Media.py  utils.py
src/fastedit/io/: Audio.py  Subtitles.py  Video.py
tests/unit/: audio_test.py  base_test.py  media_test.py  subtitles_test.py  utils_test.py  video_test.py
